test/compile_errors/err_align_too_large.w
//! expect-error: alignment exceeds maximum 65536

type S {
    @[align(131072)] x: i32,
}

fn main:
    print("x")
